laatste commit voor opbouw

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brief</title>
-    <link rel="stylesheet" href="./static/css/style.min.css">
-    <script src="static/js/main.min.js" defer></script>
+    <link rel="stylesheet" href="./static/css/style.css">
+    <script src="static/js/main.js" defer></script>
 </head>
 
 <body>
+    <img class="background" src="static/img/contract.png" alt="">
+
     <article id="brief" class="brief">
         <section class="brief__text">
             <p class="brief__text__title">Hoge Mogende Heren,</p>
@@ -43,13 +45,12 @@
                 P. Schaghen”
             </p>
         </section>
-        <div class="background"></div>
     </article>
 
     <section id="parent__popup" class="popup__collection">
 
         <article id="schip_wapen" class="popup">
-            <video class="popup__figure" autoplay loop>
+            <video class="popup__figure">
                 <source src="static/img/Hetschip_animatie.webm">
             </video>
             <section class="popup__text">
@@ -72,7 +73,7 @@
 
 
         <article id="amsterdam" class="popup">
-            <video class="popup__figure" autoplay loop>
+            <video class="popup__figure">
                 <source src="static/img/map-amsterdam.webm" type="video/mp4">
             </video>
             <section class="popup__text">
@@ -97,7 +98,7 @@
 
 
         <article id="mau_card" class="popup">
-            <video class="popup__figure" autoplay loop>
+            <video class="popup__figure">
                 <source src="static/img/mauritius_rivier.webm" type="video/mp4">
             </video>
             <section class="popup__text">
@@ -120,7 +121,7 @@
 
 
         <article id="eiland_card" class="popup">
-            <video class="popup__figure" autoplay loop>
+            <video class="popup__figure">
                 <source src="static/img/new-amsterdam.webm">
             </video>
             <section class="popup__text">
@@ -145,7 +146,7 @@
 
 
         <article id="wilden_card" class="popup">
-            <video class="popup__figure" autoplay loop>
+            <video class="popup__figure">
                 <source src="static/img/lenaap.webm">
             </video>
             <section class="popup__text">
@@ -173,9 +174,9 @@
 
 
         <article id="gulden_card" class="popup">
-            <figure class="popup__figure">
-                <img src="static/img/gulden.webm" alt="" class="popup__img">
-            </figure>
+            <video class="popup__figure">
+                <source src="static/img/gulden.webm">
+            </video>
             <section class="popup__text">
                 <h2 class="popup__title">Gulden</h2>
                 <p class="popup__par">
@@ -201,7 +202,7 @@
 
 
         <article id="lading_card" class="popup">
-            <video class="popup__figure" autoplay loop>
+            <video class="popup__figure">
                 <source src="static/img/lading.webm">
             </video>
             <section class="popup__text">
